select fix on mobile

--- a/LILDURK/css/style.css
+++ b/LILDURK/css/style.css
@@ -57,6 +57,9 @@ body {
 }
 
 input, select {
+	appearance: none;
+	-moz-appearance: none;
+	-webkit-appearance: none;
 	font-family: Arial, sans-serif;
 	font-size: 14px;
 	padding-left: 10px;
@@ -73,6 +76,11 @@ input, select {
 select {
 	padding-left: 10px;
 	padding-right: 55px;
+
+	background: url("../img/arrow.png") no-repeat;
+	background-position: right center;
+	background-size: 18px;
+	background-color: #FFFFFF;
 }
 
 /* FOR DISABLED/GREY STYLE ON BIRTHDATE SELECTOR TEXT */
